# LibftPP

./: .gitignore  CMakeLists.txt  Makefile  libftpp.hpp  main.cpp  main_client.cpp  main_server.cpp  program
includes/: bonus.hpp  data_structures.hpp  design_patterns.hpp  mathematics.hpp  network.hpp  threading.hpp
includes/Bonus/: chrono.hpp  observable_value.hpp  timeout.hpp
includes/DataStructures/: data_buffer.hpp  pool.hpp
includes/DesignPatterns/: memento.hpp  observer.hpp  singleton.hpp  state_machine.hpp
includes/Mathematics/: ivector2.hpp  ivector3.hpp  perlin_noise_2D.hpp  random_2D_coordinate_generator.hpp
includes/Network/: client.hpp  message.hpp  server.hpp
includes/Threading/: persistent_worker.hpp  thread.hpp  thread_safe_iostream.hpp  thread_safe_queue.hpp  worker_pool.hpp
src/Bonus/: timeout.cpp
src/DataStructures/: data_buffer.cpp
src/DesignPatterns/: memento.cpp
src/Mathematics/: perlin_noise_2D.cpp  random_2D_coordinate_generator.cpp
src/Network/: client.cpp  message.cpp  server.cpp
src/Threading/: persistent_worker.cpp  thread.cpp  thread_safe_iostream.cpp  worker_pool.cpp
